--- a/styles.css
+++ b/styles.css
@@ -347,3 +347,15 @@ h1 {
 #cv-dropdown li:hover {
   animation: glitch 0.3s ease-in-out infinite;
 }
+
+@media only screen and (max-width: 768px) {
+  #terminal {
+    display: none;
+  }
+  #cv-icon {
+    display: block;
+  }
+  #cv-dropdown {
+    display: none;
+  }
+}
