--- a/styles.css
+++ b/styles.css
@@ -348,12 +348,11 @@ h1 {
   animation: glitch 0.3s ease-in-out infinite;
 }
 
-@media only screen and (max-width: 768px) {
+/* hide #terminal and #cv-dropdown for small screens */
+
+@media (max-width: 1080px) {
   #terminal {
     display: none;
-  }
-  #cv-icon {
-    display: block;
   }
   #cv-dropdown {
     display: none;
