--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,14 @@ h1 {
   transition: all 0.2s;
 }
 
+.sale-indicator {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 1rem 0;
+  font-size: 14px;
+}
+
 #keyboard-hint {
   margin-top: 20px;
   font-size: 14px;
