--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ html {
   color: #0f0;
   overflow: hidden;
 }
+
 #background {
   position: fixed;
   top: 0;
@@ -68,11 +69,12 @@ h1 {
 }
 #slider-container {
   position: fixed;
-  bottom: 20rem;
+  bottom: 20%;
   left: 50%;
   transform: translateX(-50%);
   width: 80%;
   max-width: 600px;
+  /* border: 2px solid white; */
 }
 #slider {
   width: 100%;
@@ -163,6 +165,7 @@ h1 {
   font-size: 14px;
   color: #0f0;
   overflow-y: auto;
+  display: block;
   box-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
 }
 
@@ -419,9 +422,13 @@ h1 {
 
 /* hide #terminal and #cv-dropdown for small screens */
 
-@media (max-width: 1080px) {
+@media (max-width: 1380px) or (max-height: 700px) {
   #terminal {
-    display: none;
+    border: none;
+    box-shadow: none;
+    background: transparent;
+    width: 350px;
+    height: 100px;
   }
   #cv-dropdown {
     display: none;
